noinst_PROGRAMS = rediscpp
noinst_HEADERS = 
rediscpp_SOURCES = \
    network.cpp \
    server.cpp \
    log.cpp \
    timeval.cpp \
    api_connection.cpp \
    api_server.cpp \
    api_transaction.cpp \
    api_keys.cpp \
    main.cpp

rediscpp_CPPFLAGS = -D_LARGEFILE64_SOURCE -D__STDC_FORMAT_MACROS -std=c++0x

