noinst_PROGRAMS = rediscpp
noinst_HEADERS = 
rediscpp_SOURCES = \
    network.cpp \
    server.cpp \
    log.cpp \
    timeval.cpp \
    common.cpp \
    api_connection.cpp \
    api_server.cpp \
    api_transactions.cpp \
    api_keys.cpp \
    api_strings.cpp \
    api_lists.cpp \
    api_hashes.cpp \
    api_sets.cpp \
    api_sorted_sets.cpp \
    main.cpp

rediscpp_CPPFLAGS = -D_LARGEFILE64_SOURCE -D__STDC_FORMAT_MACROS -std=c++0x

